@@ -19,12 +19,13 @@ UCDetectorIterator_MONITOR_INFO=Detect unnecessary code
 #UCDetectorPreferencePageKeywords_ChangeAllCombos=Change all combo boxes below to:
 #
 AbstractUCDetectorIterator_NothingToDetectTitle=Nothing to do
-AbstractUCDetectorIterator_NothingToDetect=Nothing to detect! To many ignore?\n\
- Change selection of right mouse click.\n\
- Check preferences page:\n\
- - Tab 'Ignore': Does one setting ignore everything on selection?.\n\
- - Tab 'Detect': 'What to detect'.\n\
- - Verify UCDetector DEBUG output (configure in Tab 'Other')
+AbstractUCDetectorIterator_NothingToDetect=Nothing to detect!\n\
+ Possible solutions:\n\
+ * Change selection of right mouse click.\n\
+ * Check preferences page:\n\
+   * Tab 'Ignore': Does one setting ignore everything on selection?.\n\
+   * Tab 'Detect': 'What to detect'.\n\
+ * Verify UCDetector DEBUG output (configure in Tab 'Other')
 
 CountIterator_JobName=Count not private not filtered elements
 
